--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,34 +1,25 @@
 name: instagram
-description: clonage instagrm.
+description: clônage instagram.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+1
+version: 0.0.1+1
 
 environment:
-  sdk: '>=3.1.5 <4.0.0'
-
+  sdk: '>=2.19.4 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
 
-
-
-  cupertino_icons: ^1.0.2
-
+  english_words: ^4.0.0
+  provider: ^6.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-
   flutter_lints: ^2.0.0
 
 flutter:
-  assets:
-    - assets/
-    - assets/images/
-    - assets/images/photo/
-    - assets/images/post/
-    - assets/images/profil/
+  uses-material-design: true
